--- a/index.html
+++ b/index.html
@@ -1,27 +1,41 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Class Group Generator</title>
+  <title>Random Groep Generatie Machine</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>🎲 Group Generator</h1>
+
+<h1>🎲 Groep Generatie Machine</h1>
+
+<!-- ATTENDANCE SCREEN -->
+<div id="attendanceScreen">
+  <h2>Aanwezigheid</h2>
+  <div id="attendanceList"></div>
+  <button id="continueBtn">Continue</button>
+</div>
+
+<!-- MAIN APP -->
+<div id="app" class="hidden">
 
   <div class="controls">
     <label>
-      Group size:
-      <input type="number" id="groupSize" min="2" max="6" value="4" />
+      Groepgrootte:
+      <input type="number" id="groupSize" min="2" max="6" value="4">
     </label>
 
-    <button id="generateBtn">Generate Groups</button>
-    <button id="resetBtn" class="secondary">Reset History</button>
+    <button id="generateBtn">Genereer Groepen</button>
+    <button id="projectorBtn">Projector Mode</button>
+    <button id="resetBtn" class="secondary">Reset Geheugen</button>
   </div>
 
+  <div id="score"></div>
   <div id="groups"></div>
+</div>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
